@@ -1,3 +1,9 @@
+2013-04-11	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* include/rgxg/types.h, lib/net.c, lib/number.c,
+	  lib/utils.c, src/main.c:
+	  - by default add terminating null byte to regex string
+	  - added 'RGXG_NONULLBYTE' option
+
 2013-04-10	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/rgxg/utils.h, lib/utils.c:
 	  - use 'size_t' instead of 'int' for function parameters
